--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -200,6 +200,8 @@
 	"block.luckytntmod.nether_tnt" : "Nether TNT",
 	"block.luckytntmod.aether_tnt" : "Aether TNT",
 	"block.luckytntmod.sculk_tnt" : "Sculk TNT",
+	"block.luckytntmod.deimos" : "Deimos",
+	"block.luckytntmod.phobos" : "Phobos",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -276,6 +278,7 @@
 	"item.luckytntmod.end_dynamite" : "End Dynamite",
 	"item.luckytntmod.christmas_dynamite" : "Christmas Dynamite",
 	"item.luckytntmod.lucky_dynamite" : "Lucky Dynamite",
+	"item.luckytntmod.prism_dynamite" : "Prism Dynamite",
 	"item.luckytntmod.sculk_dynamite" : "Sculk Dynamite",
 
 	"item.luckytntmod.tnt_x5_minecart" : "Minecart with TNT x5",
@@ -338,6 +341,14 @@
 	"item.luckytntmod.honey_tnt_minecart" : "Minecart with Honey TNT",
 	"item.luckytntmod.eating_tnt_minecart" : "Minecart with Eating TNT",
 	"item.luckytntmod.lucky_tnt_minecart" : "Minecart with Lucky TNT",
+	"item.luckytntmod.lush_tnt_minecart" : "Minecart with Lush TNT",
+	"item.luckytntmod.geode_tnt_minecart" : "Minecart with Geode TNT",
+	"item.luckytntmod.nether_grove_tnt_minecart" : "Minecart with Nether Grove TNT",
+	"item.luckytntmod.dripstone_tnt_minecart" : "Minecart with Dripstone TNT",
+	"item.luckytntmod.end_tnt_minecart" : "Minecart with End TNT",
+	"item.luckytntmod.prism_tnt_minecart" : "Minecart with Prism TNT",
+	"item.luckytntmod.ring_tnt_minecart" : "Minecart with Ring TNT",
+	"item.luckytntmod.sculk_tnt_minecart" : "Minecart with Sculk TNT",
 
 	"item.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"item.luckytntmod.red_candy" : "Red Candy",
@@ -563,6 +574,8 @@
 	"entity.luckytntmod.nether_tnt" : "Nether TNT",
 	"entity.luckytntmod.aether_tnt" : "Aether TNT",
 	"entity.luckytntmod.sculk_tnt" : "Sculk TNT",
+	"entity.luckytntmod.deimos" : "Deimos",
+	"entity.luckytntmod.phobos" : "Phobos",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
@@ -627,6 +640,7 @@
 	"entity.luckytntmod.dripstone_dynamite" : "Dripstone Dynamite",
 	"entity.luckytntmod.end_dynamite" : "End Dynamite",
 	"entity.luckytntmod.christmas_dynamite" : "Christmas Dynamite",
+	"entity.luckytntmod.prism_dynamite" : "Prism Dynamite",
 	"entity.luckytntmod.sculk_dynamite" : "Sculk Dynamite",
 
 	"entity.luckytntmod.tnt_x5_minecart" : "Minecart with TNT x5",
@@ -689,6 +703,14 @@
 	"entity.luckytntmod.honey_tnt_minecart" : "Minecart with Honey TNT",
 	"entity.luckytntmod.eating_tnt_minecart" : "Minecart with Eating TNT",
 	"entity.luckytntmod.lucky_tnt_minecart" : "Minecart with Lucky TNT",
+	"entity.luckytntmod.lush_tnt_minecart" : "Minecart with Lush TNT",
+	"entity.luckytntmod.geode_tnt_minecart" : "Minecart with Geode TNT",
+	"entity.luckytntmod.nether_grove_tnt_minecart" : "Minecart with Nether Grove TNT",
+	"entity.luckytntmod.dripstone_tnt_minecart" : "Minecart with Dripstone TNT",
+	"entity.luckytntmod.end_tnt_minecart" : "Minecart with End TNT",
+	"entity.luckytntmod.prism_tnt_minecart" : "Minecart with Prism TNT",
+	"entity.luckytntmod.ring_tnt_minecart" : "Minecart with Ring TNT",
+	"entity.luckytntmod.sculk_tnt_minecart" : "Minecart with Sculk TNT",
 	
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
@@ -712,6 +734,9 @@
 	"entity.luckytntmod.vredefort_projectile" : "Vredefort Meteor",
 	"entity.luckytntmod.hydrogen_bomb_bomb" : "Hydrogen Bomb Bomb",
 	"entity.luckytntmod.disintegrating_projectile" : "Disintegrating Projectile",
+	"entity.luckytntmod.mini_ice_meteor" : "Mini Ice Meteor",
+	"entity.luckytntmod.deimos_meteor" : "Deimos Meteor",
+	"entity.luckytntmod.phobos_meteor" : "Phobos Meteor",
 
 	"entity.luckytntmod.angry_miner" : "Angry Miner",
 	"entity.luckytntmod.toxic_cloud" : "Toxic Cloud",
