--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -51,7 +51,7 @@
 	"block.luckytntmod.walking_tnt" : "Ходячий Динамит",
 	"block.luckytntmod.wool_tnt" : "Шерстяной Динамит",
 	"block.luckytntmod.say_goodbye" : "Скажи Прощай",
-        "block.luckytntmod.angry_miners" : "Злые Шахтеры",
+	"block.luckytntmod.angry_miners" : "Злые Шахтеры",
 	"block.luckytntmod.withering_tnt" : "Иссушающий Динамит",
 	"block.luckytntmod.nuclear_waste_tnt" : "Динамит С Ядерными Отходами",
 	"block.luckytntmod.static_tnt" : "Статичный Динамит",
@@ -79,7 +79,7 @@
 	"block.luckytntmod.ore_tnt" : "Рудный Динамит",
 	"block.luckytntmod.redstone_tnt" : "Редстоуновый Динамит",
 	"block.luckytntmod.random_tnt" : "Случайный Динамит",
-        "block.luckytntmod.turret_tnt" : "Динамит Турель",
+	"block.luckytntmod.turret_tnt" : "Динамит Турель",
 	"block.luckytntmod.pulse_tnt" : "Пульсирующий Динамит",
 	"block.luckytntmod.dividing_tnt" : "Делящийся Динамит",
 	"block.luckytntmod.picky_tnt" : "Ломающий Динамит",
@@ -190,6 +190,18 @@
 	"block.luckytntmod.flak_tnt" : "Зенитный Динамит",
 	"block.luckytntmod.tnt_rain" : "Дождь из Динамита",
 	"block.luckytntmod.lucky_doomsday" : "Удачный Судный День",
+	"block.luckytntmod.prism_tnt" : "Дианмит-Призма",
+	"block.luckytntmod.tetrahedron_tnt" : "Динамит-Тетраэдр",
+	"block.luckytntmod.illuminati_tnt" : "Динамит-Иллюминат",
+	"block.luckytntmod.ring_tnt" : "Кольцевой Динамит",
+	"block.luckytntmod.eye_of_the_sahara" : "Око Сахары",
+	"block.luckytntmod.asteroid_belt" : "Пояс Астероидов",
+	"block.luckytntmod.world_of_wools" : "Мир Шерсти",
+	"block.luckytntmod.nether_tnt" : "Динамит Незера",
+	"block.luckytntmod.aether_tnt" : "Райский Динамит",
+	"block.luckytntmod.sculk_tnt" : "Скалковый Динамит",
+	"block.luckytntmod.deimos" : "Деймос",
+	"block.luckytntmod.phobos" : "Фобос",
 	
 	"block.luckytntmod.nuclear_waste" : "Ядерные Отходы",
 	"block.luckytntmod.uranium_ore" : "Урановая Руда",
@@ -266,6 +278,9 @@
 	"item.luckytntmod.end_dynamite" : "Динамитная Шашка Края",
 	"item.luckytntmod.christmas_dynamite" : "Рождественская Динамитная Шашка",
 	"item.luckytntmod.lucky_dynamite" : "Динамитная Шашка Удачи",
+	"item.luckytntmod.prism_dynamite" : "Динамитная Шашка-Призма",
+	"item.luckytntmod.ring_dynamite" : "Кольцевая Динамитная Шашка",
+	"item.luckytntmod.sculk_dynamite" : "Скалковая Динамитная Шашка",
 
 
 	"item.luckytntmod.tnt_x5_minecart" : "Вагонетка с Динамитом x5",
@@ -328,6 +343,14 @@
 	"item.luckytntmod.honey_tnt_minecart" : "Вагонетка с Медовым Динамитом",
 	"item.luckytntmod.eating_tnt_minecart" : "Вагонетка с Поедающим Динамитом",
 	"item.luckytntmod.lucky_tnt_minecart" : "Вагонетка со Счастливым Динамитом",
+	"item.luckytntmod.lush_tnt_minecart" : "Вагонетка с Мшистым Динамитом",
+	"item.luckytntmod.geode_tnt_minecart" : "Вагонетка с Динамитом-Жеодой",
+	"item.luckytntmod.nether_grove_tnt_minecart" : "Вагонетка с Адский Выращивающим Динамитом",
+	"item.luckytntmod.dripstone_tnt_minecart" : "Вагонетка с Капельниковым Динамитом",
+	"item.luckytntmod.end_tnt_minecart" : "Вагонетка с Динамитом Края",
+	"item.luckytntmod.prism_tnt_minecart" : "Вагонетка с Динамитом-Призмой",
+	"item.luckytntmod.ring_tnt_minecart" : "Вагонетка с Кольцевым Динамитом",
+	"item.luckytntmod.sculk_tnt_minecart" : "Вагонетка со Скалоквым Динамитом",
 
 	"item.luckytntmod.nuclear_waste" : "Ядерные Отходы",
 	"item.luckytntmod.red_candy" : "Красная Конфета",
@@ -341,7 +364,7 @@
 	"item.luckytntmod.death_ray_ray" : "Луч Луч Смерти",
 	"item.luckytntmod.vacuum_cleaner" : "Пылесос",
        
-        "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
+    "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
 	"item.smoke_tnt.info" : "\u00A77\u00A7oИзменяйте цвет дыма правым кликом, используя красный, зеленый, синий, белый или черный краситель!",
    	"item.gotthard_tunnel.info": "\u00A77\u00A7oКликните правой кнопкой мыши с помощью посоха настраивания, чтобы сгенерировать дорогу!",
 	"item.entity_firework.info" : "\u00A77\u00A7oБлижайшая сущность, не являющаяся игроком, была выбрана для фейерверка!",
@@ -407,7 +430,7 @@
 	"entity.luckytntmod.walking_tnt" : "Ходячий Динамит",
 	"entity.luckytntmod.wool_tnt" : "Шерстяной Динамит",
 	"entity.luckytntmod.say_goodbye" : "Скажи Прощай",
-        "entity.luckytntmod.angry_miners" : "Злые Шахтеры",
+	"entity.luckytntmod.angry_miners" : "Злые Шахтеры",
 	"entity.luckytntmod.withering_tnt" : "Иссушающий Динамит",
 	"entity.luckytntmod.nuclear_waste_tnt" : "Динамит С Ядерными Отходами",
 	"entity.luckytntmod.static_tnt" : "Статичный Динамит",
@@ -435,7 +458,7 @@
 	"entity.luckytntmod.ore_tnt" : "Рудный Динамит",
 	"entity.luckytntmod.redstone_tnt" : "Редстоуновый Динамит",
 	"entity.luckytntmod.random_tnt" : "Случайный Динамит",
-        "entity.luckytntmod.turret_tnt" : "Динамит Турель",
+	"entity.luckytntmod.turret_tnt" : "Динамит Турель",
 	"entity.luckytntmod.pulse_tnt" : "Пульсирующий Динамит",
 	"entity.luckytntmod.dividing_tnt" : "Делящийся Динамит",
 	"entity.luckytntmod.picky_tnt" : "Ломающий Динамит",
@@ -543,6 +566,18 @@
 	"entity.luckytntmod.black_hole_tnt" : "Динамит-Черная Дыра",
 	"entity.luckytntmod.flak_tnt" : "Зенитный Динамит",
 	"entity.luckytntmod.tnt_rain" : "Дождь из Динамита",
+	"entity.luckytntmod.prism_tnt" : "Динамит-Призма",
+	"entity.luckytntmod.tetrahedron_tnt" : "Динамит-Тетраэдр",
+	"entity.luckytntmod.illuminati_tnt" : "Динамит-Иллюминат",
+	"entity.luckytntmod.ring_tnt" : "Кольцевой Динамит",
+	"entity.luckytntmod.eye_of_the_sahara" : "Око Сахары",
+	"entity.luckytntmod.asteroid_belt" : "Пояс Астероидов",
+	"entity.luckytntmod.world_of_wools" : "Мир Шерсти",
+	"entity.luckytntmod.nether_tnt" : "Динамит Незера",
+	"entity.luckytntmod.aether_tnt" : "Райский Динамит",
+	"entity.luckytntmod.sculk_tnt" : "Скалковый Динамит",
+	"entity.luckytntmod.deimos" : "Деймос",
+	"entity.luckytntmod.phobos" : "Фобос",
 				
 	"entity.luckytntmod.dynamite" : "Динамитная Шашка",
 	"entity.luckytntmod.dynamite_x5" : "Динамитная Шашка x5",
@@ -607,7 +642,9 @@
 	"entity.luckytntmod.dripstone_dynamite" : "Капельниковая Динамитная Шашка",
 	"entity.luckytntmod.end_dynamite" : "Динамитная Шашка Края",
 	"entity.luckytntmod.christmas_dynamite" : "Рождественская Динамитная Шашка",
-	"entity.luckytntmod.lucky_dynamite" : "Динамитная Шашка Удачи",
+	"entity.luckytntmod.prism_dynamite" : "Динамитная Шашка-Призма",
+	"entity.luckytntmod.ring_dynamite" : "Кольцевая Динамитная Шашка",
+	"entity.luckytntmod.sculk_dynamite" : "Скалковая Динамитная Шашка",
 
 	"entity.luckytntmod.tnt_x5_minecart" : "Вагонетка с Динамитом x5",
 	"entity.luckytntmod.tnt_x20_minecart" : "Вагонетка с Динамитом x20",
@@ -669,6 +706,14 @@
 	"entity.luckytntmod.honey_tnt_minecart" : "Вагонетка с Медовым Динамитом",
 	"entity.luckytntmod.eating_tnt_minecart" : "Вагонетка с Поедающим Динамитом",
 	"entity.luckytntmod.lucky_tnt_minecart" : "Вагонетка со Счастливым Динамитом",
+	"entity.luckytntmod.lush_tnt_minecart" : "Вагонетка с Мшистым Динамитом",
+	"entity.luckytntmod.geode_tnt_minecart" : "Вагонетка с Динамитом-Жеодой",
+	"entity.luckytntmod.nether_grove_tnt_minecart" : "Вагонетка с Адский Выращивающим Динамитом",
+	"entity.luckytntmod.dripstone_tnt_minecart" : "Вагонетка с Капельниковым Динамитом",
+	"entity.luckytntmod.end_tnt_minecart" : "Вагонетка с Динамитом Края",
+	"entity.luckytntmod.prism_tnt_minecart" : "Вагонетка с Динамитом-Призмой",
+	"entity.luckytntmod.ring_tnt_minecart" : "Вагонетка с Кольцевым Динамитом",
+	"entity.luckytntmod.sculk_tnt_minecart" : "Вагонетка со Скалоквым Динамитом",
 	
 	"entity.luckytntmod.meteor" : "Метеор",
 	"entity.luckytntmod.mini_meteor" : "Мини-Метеор",
@@ -692,6 +737,9 @@
 	"entity.luckytntmod.vredefort_projectile" : "Метеорит Вредефорта",
 	"entity.luckytntmod.hydrogen_bomb_bomb" : "Бомба Водородной Бомбы",
 	"entity.luckytntmod.disintegrating_projectile" : "Дизинтеграционный Снаряд",
+	"entity.luckytntmod.mini_ice_meteor" : "Мини-Ледяной Метеор",
+	"entity.luckytntmod.deimos_meteor" : "Осколок Деймоса",
+	"entity.luckytntmod.phobos_meteor" : "Осколок Фобоса",
 
 	"entity.luckytntmod.angry_miner" : "Злой Шахтер",
 	"entity.luckytntmod.toxic_cloud" : "Токсичное Облако",
@@ -737,6 +785,8 @@
    	"luckytntmod.config.average_intensity": "Обычная Сила Бедствия",
 	"luckytntmod.config.event_always_active": "Постоянные Сезонные События",
 	"luckytntmod.config.render_overlay": "Прорисовка Контура Загрязнения",
+	"luckytntmod.config.light_engine": "Скорость Светового Двигателя",
+	"luckytntmod.config.light_engine_tooltip": "Определяет скорость, с которой работает световой двигатель. 5 - это значение по умолчанию для Minecraft. Чем выше значение, тем быстрее работает световой двигатель. Высокие значения требуют компьютер по-мощнее.",
 	
 	"death.attack.say_goodbye" : "%1$s сказал прощай",
 	"death.attack.hailstone": "%1$s лишился глаза благодаря градине",
