--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -745,12 +745,12 @@
 	"entity.luckytntmod.death_ray_ray" : "Todesstrahl-Strahl",
 	"entity.luckytntmod.vacuum_shot" : "Saugschuss",
 			
-	"item_group.luckytntmod.normal_tnt" : "Normales TNT",
-	"item_group.luckytntmod.god_tnt" : "Gott TNT",
-	"item_group.luckytntmod.doomsday_tnt" : "Weltuntergangs TNT",
-	"item_group.luckytntmod.dynamite" : "Dynamit",
-	"item_group.luckytntmod.minecarts" : "TNT-Loren",
-	"item_group.luckytntmod.other" : "Anderes",
+	"itemGroup.normal_tnt" : "Normales TNT",
+	"itemGroup.god_tnt" : "Gott TNT",
+	"itemGroup.doomsday_tnt" : "Weltuntergangs TNT",
+	"itemGroup.dynamite" : "Dynamit",
+	"itemGroup.minecart" : "TNT-Loren",
+	"itemGroup.other" : "Anderes",
 	
 	"effect.contaminated_effect" : "Kontaminiert",
 	"effect.midas_touch" : "Fluch von Midas",
