--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -125,7 +125,7 @@
 	"block.luckytntmod.silk_touch_tnt" : "Динамит С Шелковым Касанием",
 	"block.luckytntmod.item_firework" : "Фейерверк Из Предметов",
 	"block.luckytntmod.animal_kingdom" : "Королевство Животных",
-	"block.luckytntmod.giant_tnt" : "Гигантский Дианмит",
+	"block.luckytntmod.giant_tnt" : "Гигантский Динамит",
 	"block.luckytntmod.mimic_tnt" : "Динамит Мимик",
 	"block.luckytntmod.reversed_tnt" : "Реверсивный Динамит",
 	"block.luckytntmod.entity_firework" : "Фейерверк Из Сущностей",
@@ -190,7 +190,7 @@
 	"block.luckytntmod.flak_tnt" : "Зенитный Динамит",
 	"block.luckytntmod.tnt_rain" : "Дождь из Динамита",
 	"block.luckytntmod.lucky_doomsday" : "Удачный Судный День",
-	"block.luckytntmod.prism_tnt" : "Дианмит-Призма",
+	"block.luckytntmod.prism_tnt" : "Динамит-Призма",
 	"block.luckytntmod.tetrahedron_tnt" : "Динамит-Тетраэдр",
 	"block.luckytntmod.illuminati_tnt" : "Динамит-Иллюминат",
 	"block.luckytntmod.ring_tnt" : "Кольцевой Динамит",
@@ -367,7 +367,7 @@
     "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
 	"item.smoke_tnt.info" : "\u00A77\u00A7oИзменяйте цвет дыма правым кликом, используя красный, зеленый, синий, белый или черный краситель!",
    	"item.gotthard_tunnel.info": "\u00A77\u00A7oКликните правой кнопкой мыши с помощью посоха настраивания, чтобы сгенерировать дорогу!",
-	"item.entity_firework.info" : "\u00A77\u00A7oБлижайшая сущность, не являющаяся игроком, была выбрана для фейерверка!",
+	"item.entity_firework.info" : "\u00A77\u00A7oБлижайшая сущность, не являющаяся игроком, будет выбрана для фейерверка!",
  	"item.item_firework.info" : "\u00A77\u00A7oКликните ПКМ предметом по динамиту, чтобы использовать его в фейерверке!",
  	"item.custom_tnt.info" : "\u00A77\u00A7oИзменяйте эффекты этого динамита в конфиг файле! На сервере также нужно изменить конфиг сервера!",
  	"item.custom_firework.info" : "\u00A77\u00A7oБлок под этим динамит будет выбран для фейерверка!", 	
@@ -524,7 +524,7 @@
 	"entity.luckytntmod.gotthard_tunnel" : "Тунель Готарда",
 	"entity.luckytntmod.levitating_tnt" : "Левитирующий Динамит",
 	"entity.luckytntmod.squaring_tnt" : "Размножающийся Дианмит",
-	"entity.luckytntmod.mineral_tnt" : "Mineral TNT",
+	"entity.luckytntmod.mineral_tnt" : "Минеральный Динамит",
 	"entity.luckytntmod.flower_forest_tnt" : "Динамит Цветочного Леса",
 	"entity.luckytntmod.icy_tnt" : "Ледяной Динамит",
 	"entity.luckytntmod.ghost_tnt" : "Призрачный Динамит",
@@ -753,7 +753,7 @@
 	"item_group.luckytntmod.minecarts" : "Вагонетки с Динамитом",
 	"item_group.luckytntmod.other" : "Прочее",
 	
-	"effect.contaminated_effect" : "Загрязнен",
+	"effect.contaminated_effect" : "Облучение",
 	"effect.midas_touch" : "Прикосновение Мидаса",
 	
 	"luckytntmod.config.title" : "Настройки Lucky TNT",
