--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -803,5 +803,8 @@
   	"command.ltmdisaster.toxicactive": "Бедствие Токсичные Облака сейчас активно на ",
   	"command.ltmdisaster.minute": " минут",
   	"command.ltmdisaster.toxicclouds": "Началось бедствие Токсичные Облака",
-  	"command.ltmdisaster.clear": "Все бедствия были остановлены"
+  	"command.ltmdisaster.clear": "Все бедствия были остановлены",
+  	"command.randomtnt.tick_count_too_low": "Сумма не должна быть ниже %s, найдено %s",
+  	"command.randomtnt.success1": "Successfully distributed ",
+  	"command.randomtnt.success2": " Items"
 }
