--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -804,7 +804,7 @@
   	"command.ltmdisaster.minute": " минут",
   	"command.ltmdisaster.toxicclouds": "Началось бедствие Токсичные Облака",
   	"command.ltmdisaster.clear": "Все бедствия были остановлены",
-  	"command.randomtnt.tick_count_too_low": "Сумма не должна быть ниже %s, найдено %s",
-  	"command.randomtnt.success1": "Успешно распространено ",
+  	"command.randomtnt.tick_count_too_low": "Количество не должно быть меньше %s, заданное количество %s",
+  	"command.randomtnt.success1": "Успешно выдано ",
   	"command.randomtnt.success2": " предметов"
 }
