--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -802,5 +802,7 @@
   	"command.ltmdisaster.toxicclouds": "Das Desaster Giftige Wolken wurde gestartet",
   	"command.ltmdisaster.minute": " Minuten",
 	"command.ltmdisaster.clear": "Alle Desaster wurden beendet",
-	"command.ltmdisaster.doomsdayactive": "Das Desaster Weltuntergang ist noch aktiv f\u00fcr "
+	"command.ltmdisaster.doomsdayactive": "Das Desaster Weltuntergang ist noch aktiv f\u00fcr ",
+  	"command.randomtnt.success1": "Verteilte erfolgreich ",
+  	"command.randomtnt.success2": " Gegenstände"
 }
