--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -803,5 +803,7 @@
   	"command.ltmdisaster.toxicactive": "Бедствие Токсичные Облака сейчас активно на ",
   	"command.ltmdisaster.minute": " минут",
   	"command.ltmdisaster.toxicclouds": "Началось бедствие Токсичные Облака",
-  	"command.ltmdisaster.clear": "Все бедствия были остановлены"
+  	"command.ltmdisaster.clear": "Все бедствия были остановлены",
+  	"command.randomtnt.success1": "Успешно выдано ",
+  	"command.randomtnt.success2": " предметов"
 }
