--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -369,6 +369,7 @@
    	"item.gotthard_tunnel.info": "\u00A77\u00A7o\u00c4ndere, dass das TNT auch Stra\u00dfen generiert, indem du mit dem Konfigurierungs-Stab auf den Block rechtsklickst!",
  	"item.entity_firework.info" : "\u00A77\u00A7oDer diesem TNT n\u00e4heste NPC wird f\u00fcr das Feuerwerk verwendet!",
  	"item.item_firework.info" : "\u00A77\u00A7oRechtsklicke dieses TNT mit einem Item in der Hand, um dieses f\u00fcr das Feuerwerk zu verwenden!",
+ 	"item.structure_tnt.info" : "\u00A77\u00A7oRechtsklicke dieses TNT mit dem Konfigurations-Stab, um die platzierte Struktur zu \u00e4ndern!", 
  	"item.custom_tnt.info" : "\u00A77\u00A7o\u00c4ndere die Effekte des TNTs indem du die Konfiguration bearbeitest! Auf einem Server wirst du auch die Server-Konfiguration bearbeiten m\u00fcssen!",
  	"item.custom_firework.info" : "\u00A77\u00A7oDer Block unter diesem TNT wird f\u00fcr das Feuerwerk verwendet!",
  	"item.antimatter.info": "\u00A77\u00A7oKann erstellt werden, wenn Uranerz von einem Todesstrahl-Strahl zerst\u00f6rt wurde!",
@@ -745,12 +746,12 @@
 	"entity.luckytntmod.death_ray_ray" : "Todesstrahl-Strahl",
 	"entity.luckytntmod.vacuum_shot" : "Saugschuss",
 			
-	"itemGroup.normal_tnt" : "Normales TNT",
-	"itemGroup.god_tnt" : "Gott TNT",
-	"itemGroup.doomsday_tnt" : "Weltuntergangs TNT",
-	"itemGroup.dynamite" : "Dynamit",
-	"itemGroup.minecart" : "TNT-Loren",
-	"itemGroup.other" : "Anderes",
+	"item_group.luckytntmod.normal_tnt" : "Normales TNT",
+	"item_group.luckytntmod.god_tnt" : "Gott TNT",
+	"item_group.luckytntmod.doomsday_tnt" : "Weltuntergangs TNT",
+	"item_group.luckytntmod.dynamite" : "Dynamit",
+	"item_group.luckytntmod.minecarts" : "TNT-Loren",
+	"item_group.luckytntmod.other" : "Anderes",
 	
 	"effect.contaminated_effect" : "Kontaminiert",
 	"effect.midas_touch" : "Fluch von Midas",
