--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -370,6 +370,7 @@
  	"item.item_firework.info" : "\u00A77\u00A7oRightclick this TNT with an item to use it in the firework!",
  	"item.custom_tnt.info" : "\u00A77\u00A7oChange the effects of this TNT by adjusting them in the config file! On a server you will also have to adjust the server config file!",
  	"item.custom_firework.info" : "\u00A77\u00A7oThe block below this TNT is chosen for the firework!",
+ 	"item.structure_tnt.info" : "\u00A77\u00A7oRightclick this TNT with the Configuration Wand in order to change the placed structure!",
  	"item.configuration_wand.info": "\u00A77\u00A7oRight-click with this Wand on specific TNTs to change their Configuration!",
 	"item.antimatter.info" : "\u00A77\u00A7oMay be created when Uranium Ore is destroyed by a Death Ray Ray!",
 	"item.obsidian_rail.info" : "\u00A77\u00A7oObsidian Rails have a lot of Explosion Resistance! Minecarts exploding on them will not deal block damage!",
@@ -745,12 +746,12 @@
 	"entity.luckytntmod.death_ray_ray" : "Death Ray Ray",
 	"entity.luckytntmod.vacuum_shot" : "Vacuum Shot",
 		
-	"itemGroup.normal_tnt" : "Normal TNT",
-	"itemGroup.god_tnt" : "God TNT",
-	"itemGroup.doomsday_tnt" : "Doomsday TNT",
-	"itemGroup.dynamite" : "Dynamite",
-	"itemGroup.minecart" : "TNT Minecarts",
-	"itemGroup.other" : "Other",
+	"item_group.luckytntmod.normal_tnt" : "Normal TNT",
+	"item_group.luckytntmod.god_tnt" : "God TNT",
+	"item_group.luckytntmod.doomsday_tnt" : "Doomsday TNT",
+	"item_group.luckytntmod.dynamite" : "Dynamite",
+	"item_group.luckytntmod.minecarts" : "TNT Minecarts",
+	"item_group.luckytntmod.other" : "Other",
 	
 	"effect.contaminated_effect" : "Contaminated",
 	"effect.midas_touch" : "Midas Touch",
