--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -364,13 +364,14 @@
 	"item.luckytntmod.death_ray_ray" : "Луч Луч Смерти",
 	"item.luckytntmod.vacuum_cleaner" : "Пылесос",
        
-    "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
+    	"item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
 	"item.smoke_tnt.info" : "\u00A77\u00A7oИзменяйте цвет дыма правым кликом, используя красный, зеленый, синий, белый или черный краситель!",
    	"item.gotthard_tunnel.info": "\u00A77\u00A7oКликните правой кнопкой мыши с помощью посоха настраивания, чтобы сгенерировать дорогу!",
 	"item.entity_firework.info" : "\u00A77\u00A7oБлижайшая сущность, не являющаяся игроком, будет выбрана для фейерверка!",
  	"item.item_firework.info" : "\u00A77\u00A7oКликните ПКМ предметом по динамиту, чтобы использовать его в фейерверке!",
  	"item.custom_tnt.info" : "\u00A77\u00A7oИзменяйте эффекты этого динамита в конфиг файле! На сервере также нужно изменить конфиг сервера!",
  	"item.custom_firework.info" : "\u00A77\u00A7oБлок под этим динамит будет выбран для фейерверка!", 	
+ 	"item.structure_tnt.info" : "\u00A77\u00A7oЩелкните правой кнопкой мыши по этому TNT Палочкой настройки, чтобы изменить структуру, которая будет размещена!",	
 	"item.configuration_wand.info": "\u00A77\u00A7oКликните правой кнопкой мыши этим посохом по особому динамиты, чтобы изменить их настройку!",
 	"item.antimatter.info": "\u00A77\u00A7oМожет быть создана, если урановая руда была уничтожена с помощью Луча Луча Смерти!",
 	"item.obsidian_rail.info" : "\u00A77\u00A7oОбсидиановые рельсы имеют большое сопротивление ко взрывам. Вагонетки, взоравнные на них, не будут наносить урон блокам!",
@@ -746,12 +747,12 @@
 	"entity.luckytntmod.death_ray_ray" : "Луч Луча Смерти",
 	"entity.luckytntmod.vacuum_shot" : "Выстрел Пылесоса",
 		
-	"itemGroup.normal_tnt" : "Обычный Динамит",
-	"itemGroup.god_tnt" : "Божественный Динамит",
-	"itemGroup.doomsday_tnt" : "Динамит Судного Дня",
-	"itemGroup.dynamite" : "Динамитные Шашки",
-	"itemGroup.minecart" : "Вагонетки с Динамитом",
-	"itemGroup.other" : "Прочее",
+	"item_group.luckytntmod.normal_tnt" : "Обычный Динамит",
+	"item_group.luckytntmod.god_tnt" : "Божественный Динамит",
+	"item_group.luckytntmod.doomsday_tnt" : "Динамит Судного Дня",
+	"item_group.luckytntmod.dynamite" : "Динамитные Шашки",
+	"item_group.luckytntmod.minecarts" : "Вагонетки с Динамитом",
+	"item_group.luckytntmod.other" : "Прочее",
 	
 	"effect.contaminated_effect" : "Облучение",
 	"effect.midas_touch" : "Прикосновение Мидаса",
